clib_packages/xforms/package/include/xforms_forms.h

/* The screen coordinate unit, FL_Coord, must be of signed type */

typedef int FL_Coord;
typedef unsigned long FL_COLOR;
typedef struct FL_FORM_    FL_FORM;
typedef struct FL_OBJECT_  FL_OBJECT;
/* Object callback function      */

typedef void ( * FL_CALLBACKPTR )( FL_OBJECT *,
                                   long );
typedef int ( * FL_HANDLEPTR )( FL_OBJECT *,
                                int,
                                FL_Coord,
                                FL_Coord,
                                int,
                                void * );
extern FL_OBJECT * fl_bgn_group( void );
extern void fl_end_group( void );
extern FL_OBJECT *fl_addto_group( FL_OBJECT * group );
/****** Routines that deal with FL_OBJECTS ********/

extern int fl_get_object_objclass( FL_OBJECT * obj );
extern int fl_get_object_type( FL_OBJECT * obj );
extern void fl_set_object_boxtype( FL_OBJECT * ob,
                                      int         boxtype );
extern int fl_get_object_boxtype( FL_OBJECT * obj );
extern void fl_set_object_bw( FL_OBJECT * ob,
                                 int         bw );
extern int fl_get_object_bw( FL_OBJECT * ob );
extern void fl_set_object_resize( FL_OBJECT    * ob,
                                     unsigned int   what );
extern void fl_get_object_resize( FL_OBJECT    * ob,
                                     unsigned int * what );
extern void fl_set_object_gravity( FL_OBJECT    * ob,
                                      unsigned int   nw,
                                      unsigned int   se );
extern void fl_get_object_gravity( FL_OBJECT    * ob,
                                      unsigned int * nw,
                                      unsigned int * se );
extern void fl_set_object_lsize( FL_OBJECT * obj,
                                    int         lsize );
extern int fl_get_object_lsize( FL_OBJECT * obj );
extern void fl_set_object_lstyle( FL_OBJECT * obj,
                                     int         lstyle );
extern int fl_get_object_lstyle( FL_OBJECT * obj );
extern void fl_set_object_lcol( FL_OBJECT * ob,
								   FL_COLOR    lcol );
extern FL_COLOR fl_get_object_lcol( FL_OBJECT * obj );
extern unsigned int fl_set_object_return( FL_OBJECT    * ob,
											 unsigned int   when );
extern unsigned int fl_get_object_return( FL_OBJECT * ob );
extern void fl_set_object_lalign( FL_OBJECT * obj,
                                     int         align );
extern int fl_get_object_lalign( FL_OBJECT * obj );
extern void fl_set_object_shortcut( FL_OBJECT  * obj,
                                       const char * sstr,
                                       int          showit );
extern void fl_set_object_shortcutkey( FL_OBJECT    * obj,
                                          unsigned int   keysym );
extern void fl_set_object_dblbuffer( FL_OBJECT * ob,
                                        int         y );
extern void fl_set_object_color( FL_OBJECT * ob,
                                    FL_COLOR    col1,
                                    FL_COLOR    col2 );
extern void fl_get_object_color( FL_OBJECT * obj,
									FL_COLOR  * col1,
									FL_COLOR  * col2 );
extern void fl_set_object_label( FL_OBJECT  * ob,
                                    const char * label );
extern void fl_set_object_label_f( FL_OBJECT  * obj,
									  const char * fmt,
									  ... );
extern const char * fl_get_object_label( FL_OBJECT * obj );
extern void fl_set_object_helper( FL_OBJECT  * ob,
                                     const char * tip );
extern void fl_set_object_helper_f( FL_OBJECT  * ob,
									   const char * fmt,
									   ... );
extern void fl_set_object_position( FL_OBJECT * obj,
                                       FL_Coord    x,
                                       FL_Coord    y );
extern void fl_get_object_size( FL_OBJECT * obj,
                                   FL_Coord  * w,
                                   FL_Coord  * h );
extern void fl_set_object_size( FL_OBJECT * obj,
                                   FL_Coord    w,
                                   FL_Coord    h );
extern void fl_set_object_automatic( FL_OBJECT * obj,
                                        int         flag );
extern int fl_object_is_automatic( FL_OBJECT * obj );
extern void fl_draw_object_label( FL_OBJECT * ob );
extern void fl_draw_object_label_outside( FL_OBJECT * ob );
extern FL_OBJECT * fl_get_object_component( FL_OBJECT * composite,
                                               int          objclass,
                                               int          type,
                                               int          numb );
extern void fl_for_all_objects( FL_FORM * form,
                                   int       ( * cb )( FL_OBJECT *, void * ),
                                   void    * v );
#define fl_draw_object_outside_label fl_draw_object_label_outside
extern void fl_set_object_dblclick( FL_OBJECT     * obj,
									   unsigned long   timeout );
extern unsigned long fl_get_object_dblclick( FL_OBJECT * obj );
extern void fl_set_object_geometry( FL_OBJECT * obj,
                                       FL_Coord    x,
                                       FL_Coord    y,
                                       FL_Coord    w,
                                       FL_Coord    h );
extern void fl_move_object( FL_OBJECT * obj,
                               FL_Coord    dx,
                               FL_Coord    dy );
#define fl_set_object_lcolor  fl_set_object_lcol
#define fl_get_object_lcolor  fl_get_object_lcol
extern void fl_fit_object_label( FL_OBJECT * obj,
                                    FL_Coord    xmargin,
                                    FL_Coord    ymargin );
extern void fl_get_object_geometry( FL_OBJECT * ob,
                                       FL_Coord  *  x,
                                       FL_Coord  *  y,
                                       FL_Coord  *  w,
                                       FL_Coord  *  h );
extern void fl_get_object_position( FL_OBJECT * ob,
                                       FL_Coord  * x,
                                       FL_Coord  * y );
/* This one takes into account the label */

extern void fl_get_object_bbox( FL_OBJECT * obj,
                                   FL_Coord  * x,
                                   FL_Coord  * y,
                                   FL_Coord  * w,
                                   FL_Coord  * h );
#define fl_compute_object_geometry   fl_get_object_bbox
extern void fl_call_object_callback( FL_OBJECT * ob );
extern FL_HANDLEPTR fl_set_object_prehandler( FL_OBJECT    * ob,
                                                 FL_HANDLEPTR   phandler );
extern FL_HANDLEPTR fl_set_object_posthandler( FL_OBJECT    * ob,
                                                  FL_HANDLEPTR   post );
extern FL_CALLBACKPTR fl_set_object_callback( FL_OBJECT      * obj,
                                                 FL_CALLBACKPTR   callback,
                                                 long             argument );
#define fl_set_object_align   fl_set_object_lalign
#define fl_set_call_back      fl_set_object_callback
extern void fl_redraw_object( FL_OBJECT * obj );
extern void fl_show_object( FL_OBJECT * ob );
extern void fl_hide_object( FL_OBJECT * ob );
extern int fl_object_is_visible( FL_OBJECT * obj );
extern void fl_free_object( FL_OBJECT * obj );
extern void fl_delete_object( FL_OBJECT * obj );
extern int fl_get_object_return_state( FL_OBJECT *obj );
extern void fl_trigger_object( FL_OBJECT * obj );
extern void fl_activate_object( FL_OBJECT * ob );
extern void fl_deactivate_object( FL_OBJECT * ob );
extern int fl_object_is_active( FL_OBJECT * obj );
extern int fl_enumerate_fonts( void ( * output )( const char * s ),
                                  int  shortform );
extern int fl_set_font_name( int          n,
                                const char * name );
extern int fl_set_font_name_f( int          n,
								  const char * fmt,
								  ... );
extern const char * fl_get_font_name( int n );
extern void fl_set_font( int numb,
                            int size );
/* Routines that facilitate free object */

extern int fl_get_char_height( int   style,
                                  int   size,
                                  int * asc,
                                  int * desc );
extern int fl_get_char_width( int style,
                                 int size );
extern int fl_get_string_height( int          style,
                                    int          size,
                                    const char * s,
                                    int          len,
                                    int        * asc,
                                    int        * desc );
extern int fl_get_string_width( int          style,
                                   int          size,
                                   const char * s,
                                   int          len );
extern int fl_get_string_widthTAB( int          style,
                                      int          size,
                                      const char * s,
                                      int          len );
extern void fl_get_string_dimension( int          fntstyle,
                                        int          fntsize,
                                        const char * s,
                                        int          len,
                                        int        * width,
                                        int        * height );
#define fl_get_string_size  fl_get_string_dimension
extern void fl_get_align_xy( int   align,
                                int   x,
                                int   y,
                                int   w,
                                int   h,
                                int   xsize,
                                int   ysize,
                                int   xoff,
                                int   yoff,
                                int * xx,
                                int * yy );
extern int fl_get_label_char_at_mouse( FL_OBJECT * obj );
#define fl_drw_text fl_draw_text
extern void fl_draw_text( int          align,
							 FL_Coord     x,
							 FL_Coord     y,
							 FL_Coord     w,
							 FL_Coord     h,
							 FL_COLOR     c,
							 int          style,
							 int          size,
							 const char * istr );
#define fl_drw_text_beside fl_draw_text_beside
extern void fl_draw_text_beside( int          align,
									FL_Coord     x,
									FL_Coord     y,
									FL_Coord     w,
									FL_Coord     h,
									FL_COLOR     c,
									int          style,
									int          size,
									const char * str );
#define fl_drw_text_cursor fl_draw_text_cursor
extern void fl_draw_text_cursor( int          align,
									FL_Coord     x,
									FL_Coord     y,
									FL_Coord     w,
									FL_Coord     h,
									FL_COLOR     c,
									int          style,
									int          size,
									const char * str,
									FL_COLOR     cc,
									int          pos );
#define fl_drw_box fl_draw_box
extern void fl_draw_box( int      style,
							FL_Coord x,
							FL_Coord y,
							FL_Coord w,
							FL_Coord h,
							FL_COLOR c,
							int      bw_in );
typedef void ( * FL_DRAWPTR )( FL_Coord,
                               FL_Coord,
                               FL_Coord,
                               FL_Coord,
                               int,
                               FL_COLOR);
extern int fl_add_symbol( const char * name,
                             FL_DRAWPTR   drawit,
                             int          scalable );
extern int fl_delete_symbol( const char * name );
extern int fl_draw_symbol( const char * label,
                              FL_Coord     x,
                              FL_Coord     y,
                              FL_Coord     w,
                              FL_Coord     h,
                              FL_COLOR     col );
extern unsigned long fl_mapcolor( FL_COLOR col,
                                     int      r,
                                     int      g,
                                     int      b );
extern long fl_mapcolorname( FL_COLOR     col,
                                const char * name );
#define fl_mapcolor_name  fl_mapcolorname