xforms/package/xforms_forms.pas


function fl_bgn_group: PFL_OBJECT; cdecl; external;
procedure fl_end_group; cdecl; external;
function fl_addto_group(group: PFL_OBJECT): PFL_OBJECT; cdecl; external;
{***** Routines that deal with FL_OBJECTS ******* }
function fl_get_object_objclass(obj: PFL_OBJECT): cint; cdecl; external;
function fl_get_object_type(obj: PFL_OBJECT): cint; cdecl; external;
procedure fl_set_object_boxtype(ob: PFL_OBJECT; boxtype: cint); cdecl; external;
function fl_get_object_boxtype(obj: PFL_OBJECT): cint; cdecl; external;
procedure fl_set_object_bw(ob: PFL_OBJECT; bw: cint); cdecl; external;
function fl_get_object_bw(ob: PFL_OBJECT): cint; cdecl; external;
procedure fl_set_object_resize(ob: PFL_OBJECT; what: cuint); cdecl; external;
procedure fl_get_object_resize(ob: PFL_OBJECT; what: Pcuint); cdecl; external;
procedure fl_set_object_gravity(ob: PFL_OBJECT; nw: cuint; se: cuint); cdecl; external;
procedure fl_get_object_gravity(ob: PFL_OBJECT; nw: Pcuint; se: Pcuint); cdecl; external;
procedure fl_set_object_lsize(obj: PFL_OBJECT; lsize: cint); cdecl; external;
function fl_get_object_lsize(obj: PFL_OBJECT): cint; cdecl; external;
procedure fl_set_object_lstyle(obj: PFL_OBJECT; lstyle: cint); cdecl; external;
function fl_get_object_lstyle(obj: PFL_OBJECT): cint; cdecl; external;
procedure fl_set_object_lcol(ob: PFL_OBJECT; lcol: TFL_COLOR); cdecl; external;
function fl_get_object_lcol(obj: PFL_OBJECT): TFL_COLOR; cdecl; external;
function fl_set_object_return(ob: PFL_OBJECT; when: cuint): cuint; cdecl; external;
function fl_get_object_return(ob: PFL_OBJECT): cuint; cdecl; external;
procedure fl_set_object_lalign(obj: PFL_OBJECT; align: cint); cdecl; external;
function fl_get_object_lalign(obj: PFL_OBJECT): cint; cdecl; external;
(* Const before type ignored *)
procedure fl_set_object_shortcut(obj: PFL_OBJECT; sstr: PChar; showit: cint); cdecl; external;
procedure fl_set_object_shortcutkey(obj: PFL_OBJECT; keysym: cuint); cdecl; external;
procedure fl_set_object_dblbuffer(ob: PFL_OBJECT; y: cint); cdecl; external;
procedure fl_set_object_color(ob: PFL_OBJECT; col1: TFL_COLOR; col2: TFL_COLOR); cdecl; external;
procedure fl_get_object_color(obj: PFL_OBJECT; col1: PFL_COLOR; col2: PFL_COLOR); cdecl; external;
(* Const before type ignored *)
procedure fl_set_object_label(ob: PFL_OBJECT; _label: PChar); cdecl; external;
(* Const before type ignored *)
procedure fl_set_object_label_f(obj: PFL_OBJECT; fmt: PChar; args: array of const); cdecl; external;
procedure fl_set_object_label_f(obj: PFL_OBJECT; fmt: PChar); cdecl; external;
(* Const before type ignored *)
function fl_get_object_label(obj: PFL_OBJECT): PChar; cdecl; external;
(* Const before type ignored *)
procedure fl_set_object_helper(ob: PFL_OBJECT; tip: PChar); cdecl; external;
(* Const before type ignored *)
procedure fl_set_object_helper_f(ob: PFL_OBJECT; fmt: PChar; args: array of const); cdecl; external;
procedure fl_set_object_helper_f(ob: PFL_OBJECT; fmt: PChar); cdecl; external;
procedure fl_set_object_position(obj: PFL_OBJECT; x: TFL_Coord; y: TFL_Coord); cdecl; external;
procedure fl_get_object_size(obj: PFL_OBJECT; w: PFL_Coord; h: PFL_Coord); cdecl; external;
procedure fl_set_object_size(obj: PFL_OBJECT; w: TFL_Coord; h: TFL_Coord); cdecl; external;
procedure fl_set_object_automatic(obj: PFL_OBJECT; flag: cint); cdecl; external;
function fl_object_is_automatic(obj: PFL_OBJECT): cint; cdecl; external;
procedure fl_draw_object_label(ob: PFL_OBJECT); cdecl; external;
procedure fl_draw_object_label_outside(ob: PFL_OBJECT); cdecl; external;
function fl_get_object_component(composite: PFL_OBJECT; objclass: cint; _type: cint; numb: cint): PFL_OBJECT; cdecl; external;

type
  tfunc1 = function(para1: PFL_OBJECT; para2: pointer): cint;

  //procedure fl_for_all_objects(form:PFL_FORM; cb:function (para1:PFL_OBJECT; para2:pointer):cint; v:pointer);cdecl;external;
procedure fl_for_all_objects(form: PFL_FORM; cb: tfunc1; v: pointer); cdecl; external;
//const
//fl_draw_object_outside_label = fl_draw_object_label_outside;
procedure fl_draw_object_outside_label(ob: PFL_OBJECT); cdecl; external Name 'fl_draw_object_label_outside';

procedure fl_set_object_dblclick(obj: PFL_OBJECT; timeout: cuint); cdecl; external;
function fl_get_object_dblclick(obj: PFL_OBJECT): cuint; cdecl; external;
procedure fl_set_object_geometry(obj: PFL_OBJECT; x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord); cdecl; external;
procedure fl_move_object(obj: PFL_OBJECT; dx: TFL_Coord; dy: TFL_Coord); cdecl; external;
//const
//  fl_set_object_lcolor = fl_set_object_lcol;  
//  fl_get_object_lcolor = fl_get_object_lcol;
procedure fl_set_object_lcolor(ob: PFL_OBJECT; lcol: TFL_COLOR); cdecl; external Name 'fl_set_object_lcol';
function fl_get_object_lcolor(obj: PFL_OBJECT): TFL_COLOR; cdecl; external Name 'fl_get_object_lcol';


procedure fl_fit_object_label(obj: PFL_OBJECT; xmargin: TFL_Coord; ymargin: TFL_Coord); cdecl; external;
procedure fl_get_object_geometry(ob: PFL_OBJECT; x: PFL_Coord; y: PFL_Coord; w: PFL_Coord; h: PFL_Coord); cdecl; external;
procedure fl_get_object_position(ob: PFL_OBJECT; x: PFL_Coord; y: PFL_Coord); cdecl; external;
{ This one takes into account the label  }
procedure fl_get_object_bbox(obj: PFL_OBJECT; x: PFL_Coord; y: PFL_Coord; w: PFL_Coord; h: PFL_Coord); cdecl; external;
//const
//  fl_compute_object_geometry = fl_get_object_bbox;  
procedure fl_compute_object_geometry(obj: PFL_OBJECT; x: PFL_Coord; y: PFL_Coord; w: PFL_Coord; h: PFL_Coord); cdecl; external Name 'fl_get_object_bbox';

procedure fl_call_object_callback(ob: PFL_OBJECT); cdecl; external;
function fl_set_object_prehandler(ob: PFL_OBJECT; phandler: TFL_HANDLEPTR): TFL_HANDLEPTR; cdecl; external;
function fl_set_object_posthandler(ob: PFL_OBJECT; post: TFL_HANDLEPTR): TFL_HANDLEPTR; cdecl; external;
function fl_set_object_callback(obj: PFL_OBJECT; callback: TFL_CALLBACKPTR; argument: cint): TFL_CALLBACKPTR; cdecl; external;
//const
//  fl_set_object_align = fl_set_object_lalign;  
//  fl_set_call_back = fl_set_object_callback;  
procedure fl_set_object_align(obj: PFL_OBJECT; align: cint); cdecl; external Name 'fl_set_object_lalign';
function fl_set_call_back(obj: PFL_OBJECT; callback: TFL_CALLBACKPTR; argument: cint): TFL_CALLBACKPTR; cdecl; external Name 'fl_set_object_callback';

procedure fl_redraw_object(obj: PFL_OBJECT); cdecl; external;
procedure fl_show_object(ob: PFL_OBJECT); cdecl; external;
procedure fl_hide_object(ob: PFL_OBJECT); cdecl; external;
function fl_object_is_visible(obj: PFL_OBJECT): cint; cdecl; external;
procedure fl_free_object(obj: PFL_OBJECT); cdecl; external;
procedure fl_delete_object(obj: PFL_OBJECT); cdecl; external;
function fl_get_object_return_state(obj: PFL_OBJECT): cint; cdecl; external;
procedure fl_trigger_object(obj: PFL_OBJECT); cdecl; external;
procedure fl_activate_object(ob: PFL_OBJECT); cdecl; external;
procedure fl_deactivate_object(ob: PFL_OBJECT); cdecl; external;
function fl_object_is_active(obj: PFL_OBJECT): cint; cdecl; external;
(* Const before type ignored *)

type
  Tproc2 = procedure(s: PChar);

function fl_enumerate_fonts(output: Tproc2; shortform: cint): cint; cdecl; external;
//function fl_enumerate_fonts(output:procedure (s:Pchar); shortform:cint):cint;cdecl;external;
(* Const before type ignored *)
function fl_set_font_name(n: cint; Name: PChar): cint; cdecl; external;
(* Const before type ignored *)
function fl_set_font_name_f(n: cint; fmt: PChar; args: array of const): cint; cdecl; external;
function fl_set_font_name_f(n: cint; fmt: PChar): cint; cdecl; external;
(* Const before type ignored *)
function fl_get_font_name(n: cint): PChar; cdecl; external;
procedure fl_set_font(numb: cint; size: cint); cdecl; external;
{ Routines that facilitate free object  }
function fl_get_char_height(style: cint; size: cint; asc: Pcint; desc: Pcint): cint; cdecl; external;
function fl_get_char_width(style: cint; size: cint): cint; cdecl; external;
(* Const before type ignored *)
function fl_get_string_height(style: cint; size: cint; s: PChar; len: cint; asc: Pcint;
  desc: Pcint): cint; cdecl; external;
(* Const before type ignored *)
function fl_get_string_width(style: cint; size: cint; s: PChar; len: cint): cint; cdecl; external;
(* Const before type ignored *)
function fl_get_string_widthTAB(style: cint; size: cint; s: PChar; len: cint): cint; cdecl; external;
(* Const before type ignored *)
procedure fl_get_string_dimension(fntstyle: cint; fntsize: cint; s: PChar; len: cint; Width: Pcint; Height: Pcint); cdecl; external;
//const
//  fl_get_string_size = fl_get_string_dimension;  
procedure fl_get_string_size(fntstyle: cint; fntsize: cint; s: PChar; len: cint; Width: Pcint; Height: Pcint); cdecl; external Name 'fl_get_string_dimension';

procedure fl_get_align_xy(align: cint; x: cint; y: cint; w: cint; h: cint;
  xsize: cint; ysize: cint; xoff: cint; yoff: cint; xx: Pcint;
  yy: Pcint); cdecl; external;
function fl_get_label_char_at_mouse(obj: PFL_OBJECT): cint; cdecl; external;
//const
//  fl_drw_text = fl_draw_text;  
procedure fl_drw_text(align: cint; x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord; c: TFL_COLOR; style: cint; size: cint; istr: PChar); cdecl; external Name 'fl_draw_text';
(* Const before type ignored *)

procedure fl_draw_text(align: cint; x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord; c: TFL_COLOR; style: cint; size: cint; istr: PChar); cdecl; external;
//const
//  fl_drw_text_beside = fl_draw_text_beside;  
procedure fl_drw_text_beside(align: cint; x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord; c: TFL_COLOR; style: cint; size: cint; str: PChar); cdecl; external Name 'fl_draw_text_beside';
(* Const before type ignored *)

procedure fl_draw_text_beside(align: cint; x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord; c: TFL_COLOR; style: cint; size: cint; str: PChar); cdecl; external;
//const
//  fl_drw_text_cursor = fl_draw_text_cursor;  
procedure fl_drw_text_cursor(align: cint; x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord; c: TFL_COLOR; style: cint; size: cint; str: PChar; cc: TFL_COLOR; pos: cint); cdecl; external Name 'fl_draw_text_cursor';
(* Const before type ignored *)

procedure fl_draw_text_cursor(align: cint; x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord; c: TFL_COLOR; style: cint; size: cint; str: PChar; cc: TFL_COLOR; pos: cint); cdecl; external;
//const
//  fl_drw_box = fl_draw_box;  
procedure fl_drw_box(style: cint; x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord; c: TFL_COLOR; bw_in: cint); cdecl; external Name 'fl_draw_box';

procedure fl_draw_box(style: cint; x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord; c: TFL_COLOR; bw_in: cint); cdecl; external;

type

  TFL_DRAWPTR = procedure(para1: TFL_Coord; para2: TFL_Coord; para3: TFL_Coord; para4: TFL_Coord; para5: cint;
    para6: TFL_COLOR); cdecl;

  (* Const before type ignored *)

function fl_add_symbol(Name: PChar; drawit: TFL_DRAWPTR; scalable: cint): cint; cdecl; external;
(* Const before type ignored *)
function fl_delete_symbol(Name: PChar): cint; cdecl; external;
(* Const before type ignored *)
function fl_draw_symbol(_label: PChar; x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord;
  col: TFL_COLOR): cint; cdecl; external;
function fl_mapcolor(col: TFL_COLOR; r: cint; g: cint; b: cint): cuint; cdecl; external;
(* Const before type ignored *)
function fl_mapcolorname(col: TFL_COLOR; Name: PChar): cint; cdecl; external;
//const
//  fl_mapcolor_name = fl_mapcolorname;  
function fl_mapcolor_name(col: TFL_COLOR; Name: PChar): cint; cdecl; external Name 'fl_mapcolorname';
